--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,21 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    // Usare IntelliSense per informazioni sui possibili attributi.
+    // Al passaggio del mouse vengono visualizzate le descrizioni degli attributi esistenti.
+    // Per altre informazioni, visitare: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "type": "java",
-            "name": "SnakeGame",
-            "request": "launch",
-            "mainClass": "snake.SnakeGame",
-            "projectName": "chess_9cb917e5"
-        },
-        {
-            "type": "java",
-            "name": "Main",
-            "request": "launch",
-            "mainClass": "com.example.chess.Main",
-            "projectName": "chess_9cb917e5"
-        },
-        {
-            "type": "java",
             "name": "Current File",
             "request": "launch",
-            "mainClass": "${file}",
+            "mainClass": "${file}"
+        },
+        {
+            "type": "java",
+            "name": "SnakeGame",
+            "request": "launch",
+            "mainClass": "SnakeGame",
+            "projectName": "chess_9cb917e5",
             "vmArgs": "--module-path \"/Users/simonecavion/Documents/GitHub/javafx-sdk-20/lib\" --add-modules javafx.controls,javafx.fxml"
         }
     ]
